Enable healthcheck for SQL server in Docker Compose configuration

--- a/libsql-server/docker-compose.yml
+++ b/libsql-server/docker-compose.yml
@@ -23,12 +23,12 @@ services:
     command: sqld --enable-bottomless-replication
     depends_on:
       - minio
-    # healthcheck:
-    #   test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-    #   interval: 10s
-    #   timeout: 5s
-    #   retries: 3
-    #   start_period: 5s
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+      start_period: 5s
     restart: unless-stopped
     networks:
       - libsql-network
